# billing_knet

./: .gitignore  README.md  gunicorn.service  pyproject.toml
billing/api/auth/: urls.py
billing/api/v1/: serializers.py  urls.py  views.py
billing/apps/abonents/: admin.py  apps.py  event_writer.py  forms.py  models.py  urls.py  views.py
billing/apps/groups/: admin.py  apps.py  models.py  urls.py  views.py
billing/apps/sberbank_payments/: admin.py  apps.py  decorators.py  models.py  sberbank_payment.py  views.py
billing/apps/tinkoff_payments/: admin.py  apps.py  models.py  payment.py  urls.py  views.py
billing/apps/users/: forms.py  send_email.py  urls.py  views.py
billing/billing/: settings.py  urls.py
billing/core/: asgi.py  forms.py  settings.py  trust_payment.py  urls.py  views.py  wsgi.py
billing/core/helpers/: constants.py  ip_generator_from_pool.py  ip_generator_unique.py  recalculation.py  trust_payment_logic.py  сhange_tarif.py
billing/core/tests/: test_views.py
billing/db_backups/yandex_disk/: readme.txt  yandex_disk.py
billing/templates/: base.html
billing/templates/admin/: add_funds.html  block.html  change_tarif.html  payment_report.html
billing/templates/tinkoff/: init.html  init2.html
billing/templates/users/: block.html  login.html  payment.html  profile tarif.html  profile.html  profile.html.bak  profile2.html  profile_old.html  profile_tarif.html  report.html  tarif.html  user_profile.html
billing/utils/: telegram_sender.py
billing/utils/billing_scripts/: add_users_to_mikrotik.py  config_servers_mikrotik.py  crontab.txt  (+2 more)
(+33 files in other folders)
