[tool.poetry]
name = "billing-knet"
version = "0.1.0"
description = "Billing system for internet providers"
authors = ["Konstantin Kosolapov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
